# LP_MP

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md
solvers/: CMakeLists.txt
solvers/binary_tomography/: CMakeLists.txt  binary_tomography.cpp  binary_tomography.h
solvers/cell_tracking/: CMakeLists.txt  cell_tracking.cpp  cell_tracking.h  cell_tracking_constructor.hxx  cell_tracking_duplicate_edges.cpp  cell_tracking_mother_machine.cpp  cell_tracking_with_division_distance.cpp  conservation_tracking.cpp  conservation_tracking_constructor.hxx  detection_factor.hxx  detection_factor_caching.hxx  generate_solvers.py  graphbuilder.h  graphreader.cpp  json_graph_reader.h  jsongraphreader.cpp
solvers/cosegmentation/: .cosegmentation.cpp.swp  .cosegmentation.h.swp  .exec_cosegmentation.cpp.swp  .marginal_summation_message.hxx.swp  .message_replicator.hxx.swp  .message_replicator_factor.hxx.swp  CMakeLists.txt  assignment_problem_construction.hxx  cosegmentation.cpp  cosegmentation.cpp.old  cosegmentation.h  cosegmentation.h.old  cosegmentation.vim  cosegmentation_bins.cpp  cosegmentation_bins.h  exec_cosegmentation.cpp  marginal_summation_message.hxx  marginal_summation_replicator.hxx  message_replicator.hxx  message_replicator_factor.hxx  potts_problem_construction.hxx
solvers/discrete_tomography/: .directory  CMakeLists.txt  discrete_tomography.cpp  discrete_tomography.h  discrete_tomography_bundle_cardinality_factors.cpp  discrete_tomography_cardinality_factor.hxx  discrete_tomography_cardinality_factor_constructor.hxx  discrete_tomography_combined_gurobi.cpp  discrete_tomography_counting_naive.hxx  discrete_tomography_cplex.cpp  discrete_tomography_factor_counting.hxx  discrete_tomography_factor_pairwise.hxx  discrete_tomography_factor_unary.hxx  discrete_tomography_fw.cpp  discrete_tomography_gurobi.cpp  discrete_tomography_localsolver.cpp  discrete_tomography_lp.cpp  discrete_tomography_message_counting.hxx  discrete_tomography_message_counting_pairwise.hxx  discrete_tomography_message_counting_root.hxx  discrete_tomography_message_counting_up.hxx  discrete_tomography_mplp.cpp  discrete_tomography_sat.cpp  discrete_tomography_standard_relax_cplex.cpp  discrete_tomography_standard_relax_cplex_sql.cpp  discrete_tomography_standard_relax_gurobi.cpp  discrete_tomography_tree_constructor.hxx  dt_sequential.hxx  minConv.hxx  tomography.h  tomography_message_reg.hxx
solvers/evaluation/: CMakeLists.txt  discrete_tomography_eval.cpp  evaluate.hxx  graph_matching.cpp  multicut.cpp
solvers/graph_matching/: CMakeLists.txt  exec_graph_matching.cpp  graph_matching.cpp  graph_matching.h  graph_matching_format.txt  graph_matching_via_gm_left.cpp  graph_matching_via_gm_left_tightening.cpp  graph_matching_via_gm_right.cpp  graph_matching_via_gm_right_tightening.cpp  graph_matching_via_gm_tightening_uai.cpp  graph_matching_via_gm_uai.cpp  graph_matching_via_mcf_both_sides.cpp  graph_matching_via_mcf_both_sides_tightening.cpp  graph_matching_via_mcf_left.cpp  graph_matching_via_mcf_left_tightening.cpp  graph_matching_via_mcf_right.cpp  graph_matching_via_mcf_right_tightening.cpp  graph_matching_via_mcf_tightening_uai.cpp  graph_matching_via_mcf_uai.cpp  graph_matching_via_mcf_uai_plot.cpp  graph_matching_via_mcf_uai_tightening.cpp  graph_matching_via_mp_both_sides.cpp  graph_matching_via_mp_both_sides_tightening.cpp  graph_matching_via_mp_left.cpp  graph_matching_via_mp_left_tightening.cpp  graph_matching_via_mp_right.cpp  graph_matching_via_mp_right_tightening.cpp  graph_matching_via_mp_tightening_uai.cpp  graph_matching_via_mp_uai.cpp  hungarian_bp_both_sides.cpp  hungarian_bp_both_sides_tightening.cpp  hungarian_bp_left.cpp  hungarian_bp_left_tightening.cpp  hungarian_bp_right.cpp  hungarian_bp_right_tightening.cpp  hungarian_bp_uai.cpp  hungarian_bp_uai_tightening.cpp
solvers/graphical_model/: CMakeLists.txt  generate_solvers.py  graphical_model.h  mplp_opengm.cpp  mplp_uai.cpp  srmp_opengm.cpp  srmp_tightening_opengm.cpp  srmp_uai.cpp
solvers/max_cut/: CMakeLists.txt  QUBO_cycle.cpp  QUBO_cycle_odd_bicycle_wheel.cpp  generate_solvers.py  max_cut.h  max_cut_cycle.cpp  max_cut_cycle_odd_bicycle_wheel.cpp  max_cut_factors.hxx
solvers/moral_lineage_tracing/: CMakeLists.txt  mlt_constructor.hxx  moral_lineage_tracing.h
solvers/multicut/: CMakeLists.txt  generate_solvers.py  lifted_multicut_factors_messages.hxx  lifted_multicut_h5.cpp  lifted_multicut_h5_grid.cpp  lifted_multicut_text.cpp  mc_bin.cpp  mc_test_simple.cpp  multicut.h  multicut_constructor.hxx  multicut_factors_messages.hxx  multicut_global_factor.hxx  multicut_message.hxx  multicut_mplp.cpp  multicut_odd_wheel.hxx  multicut_opengm_mplp.cpp  multicut_opengm_srmp.cpp  multicut_opengm_srmp_cycle.cpp  multicut_opengm_srmp_cycle_odd_wheel.cpp  multicut_opengm_srmp_cycle_odd_wheel_odd_bicycle_wheel.cpp  multicut_srmp.cpp  multicut_triplet_factor.hxx  multicut_unary_factor.hxx  multiway_cut_factors_messages.hxx  potts_via_multiway_cut.cpp
solvers/tomography/: tomography.h~  tomography_factor_reg.hxx
src/solvers/: CMakeLists.txt
test/: CMakeLists.txt  cycle_inequalities.cpp  discrete_tomography.cpp  discrete_tomography_chain.cpp  discrete_tomography_file_input.cpp  discrete_tomography_gurobi.cpp  factor_message_containers.cpp  graph_matching.cpp  graph_test.cpp  graphical_model.cpp  labeling_factor_messages.cpp  min_conv.cpp  min_cost_flow.cpp  min_cost_flow_cs2.cpp  multicut.cpp  potts_factor.cpp  sat_solver.cpp  serialization.cpp  shortest_path.cpp  simplex.cpp  simplex_marginalization.cpp  simplex_test.cpp  test.cpp  test.h  test_FWMAP.cpp  test_conic_bundle.cpp  test_main.cpp  test_model.cpp  test_model.hxx  test_three_dimensional_variable_array.cpp  test_two_dimensional_variable_array.cpp  vector.cpp
test/discrete_tomography/: CMakeLists.txt  RunScript.sh  discrete_tomography.cpp  discrete_tomography.h  discrete_tomography_factor_counting.hxx  discrete_tomography_message_counting.hxx  discrete_tomography_message_counting_pairwise.hxx  discrete_tomography_tree_constructor.hxx  (+1 more)
(+235 files in other folders)
